--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the Featured controller here.
+// Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.ui.container {
-  margin-bottom: 50px;
-}
