workouts index and update

--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -5,3 +5,5 @@
     | Featured
   = link_to videos_path, class: "item #{'active' if active == :videos}"
     | Videos
+  = link_to workouts_path, class: "item #{'active' if active == :workouts}"
+    | Workouts
