--- a/app/views/featured/index.html.slim
+++ b/app/views/featured/index.html.slim
@@ -21,22 +21,38 @@
             = f.label :body
             = f.text_area :body
           .field
-            = f.submit class: 'ui button primary'
+            = f.submit class: 'ui button primary',
+                        data: { confirm: 'Are you sure you want to update this article?' }
+            = link_to 'Delete Article',
+                        article_path(a),
+                        method: :delete,
+                        data: { confirm: 'Are you sure you want to delete this article?' },
+                        class: 'ui button negative'
 
   h2 Featured Videos
   .ui.segment(style="width: 600px;")
     = form_tag featured_update_videos_path, method: :put, class: 'ui form'
       .field
-        = select_tag 'featured[0]', options_from_collection_for_select(@videos, 'id', 'title', @videos.featured.first.id), class: 'ui dropdown'
+        = select_tag 'featured[0]',
+                      options_from_collection_for_select(@videos, 'id', 'title', @videos.featured.first.id),
+                      class: 'ui dropdown'
       .field
-        = select_tag 'featured[1]', options_from_collection_for_select(@videos, 'id', 'title', @videos.featured.last.id), class: 'ui dropdown'
+        = select_tag 'featured[1]',
+                      options_from_collection_for_select(@videos, 'id', 'title', @videos.featured.last.id),
+                      class: 'ui dropdown'
       .field
-        = submit_tag 'Update Videos', class: 'ui button primary'
+        = submit_tag 'Update Videos',
+                      class: 'ui button primary',
+                      data: { confirm: 'Are you sure you want to update the featured video?' }
 
   h2 Featured Workout
   .ui.segment(style="width: 600px;")
     = form_tag featured_update_workout_path, method: :put, class: 'ui form'
       .field
-        = select_tag 'workout', options_from_collection_for_select(@workouts, 'id', 'name', @workouts.featured.first.id), class: 'ui dropdown'
+        = select_tag 'workout',
+                      options_from_collection_for_select(@workouts, 'id', 'name', @workouts.featured.first.id),
+                      class: 'ui dropdown'
       .field
-        = submit_tag 'Update Workout', class: 'ui button primary'
+        = submit_tag 'Update Workout',
+                      class: 'ui button primary',
+                      data: { confirm: 'Are you sure you want to update the featured workout?' }
