--- a/app/views/workouts/index.html.slim
+++ b/app/views/workouts/index.html.slim
@@ -26,6 +26,11 @@
           .field
             = render('tags', workout: w)
           .field
-            = f.submit class: 'ui button primary'
+            = f.submit class: 'ui button primary', data: { confirm: 'Are you sure you want to update this workout?' }
+            = link_to 'Delete Workout',
+                        workout_path(w),
+                        method: :delete,
+                        data: {confirm: 'Are you sure you want to delete this workout?'},
+                        class: 'ui button negative'
 
         = render('circuits', workout: w)
