--- a/app/views/featured/index.html.slim
+++ b/app/views/featured/index.html.slim
@@ -10,24 +10,9 @@
         .dropdown.icon
         = a.headline
       .content
-        = form_for a, html: {class: 'ui form'} do |f|
-          .field
-            = f.label :headline
-            = f.text_field :headline
-          .field
-            = f.label :author
-            = f.text_field :author
-          .field
-            = f.label :body
-            = f.text_area :body
-          .field
-            = f.submit class: 'ui button primary',
-                        data: { confirm: 'Are you sure you want to update this article?' }
-            = link_to 'Delete Article',
-                        article_path(a),
-                        method: :delete,
-                        data: { confirm: 'Are you sure you want to delete this article?' },
-                        class: 'ui button negative'
+        = render 'articles/form', article: a
+  = link_to new_article_path, class: 'ui circular icon button', style: 'margin-top: 10px;' do
+    i.plus.icon
 
   h2 Featured Videos
   .ui.segment(style="width: 600px;")
