--- a/app/views/featured/index.html.slim
+++ b/app/views/featured/index.html.slim
@@ -19,11 +19,11 @@
     = form_tag featured_update_videos_path, method: :put, class: 'ui form'
       .field
         = select_tag 'featured[0]',
-                      options_from_collection_for_select(@videos, 'id', 'title', @videos.featured.first.id),
+                      options_from_collection_for_select(@videos, 'id', 'title', @featured_videos.first.id),
                       class: 'ui dropdown'
       .field
         = select_tag 'featured[1]',
-                      options_from_collection_for_select(@videos, 'id', 'title', @videos.featured.last.id),
+                      options_from_collection_for_select(@videos, 'id', 'title', @featured_videos.last.id),
                       class: 'ui dropdown'
       .field
         = submit_tag 'Update Videos',
@@ -35,7 +35,7 @@
     = form_tag featured_update_workout_path, method: :put, class: 'ui form'
       .field
         = select_tag 'workout',
-                      options_from_collection_for_select(@workouts, 'id', 'name', @workouts.featured.first.id),
+                      options_from_collection_for_select(@workouts, 'id', 'name', @featured_workout.id),
                       class: 'ui dropdown'
       .field
         = submit_tag 'Update Workout',
