--- a/app/views/workouts/_circuits.html.slim
+++ b/app/views/workouts/_circuits.html.slim
@@ -1,24 +1,15 @@
 .ui.dividing.header Circuits
 .field
   .ui.styled.accordion
-    - workout.circuits.order(:id).each_with_index do |c, i|
+    - workout.circuits.each_with_index do |c, i|
       .title
-        .dropdown.icon
+        i.dropdown.icon
         = "Circuit #{i + 1}"
       .content
-        = form_for [workout, c], html: {class: 'ui form'} do |f|
-          .field
-            = label_tag 'setup', 'Setup'
-            = select_tag 'setup', options_from_collection_for_select(@setups, 'id', 'name', c.setup.id), class: 'ui dropdown'
-          .field
-            = f.label :sets
-            = f.text_field :sets, type: 'number'
-          .field
-            = f.submit class: 'ui button primary', data: { confirm: 'Are you sure you want to update this circuit?' }
-            = link_to 'Delete Circuit',
-                        workout_circuit_path(workout, c),
-                        method: :delete,
-                        data: {confirm: 'Are you sure you want to delete this circuit?'},
-                        class: 'ui button negative'
+        = render 'circuits/form', workout: workout, circuit: c
 
-        = render('workouts/movements', workout: workout, circuit: c)
+    .title
+      i.blue.add.circle.icon
+      | New Circuit
+    .content
+      = render 'circuits/form', workout: workout, circuit: Circuit.new
