--- a/app/views/workouts/_form.html.slim
+++ b/app/views/workouts/_form.html.slim
@@ -20,10 +20,13 @@
     = f.hidden_field :image, value: workout.cached_image_data
     = f.file_field :image
   .field
-    = f.submit class: 'ui button primary', data: { confirm: 'Are you sure you want to update this workout?' }
+    = f.submit class: 'ui button primary'
     - if workout.id.present?
       = link_to 'Delete Workout',
               workout_path(workout),
               method: :delete,
               data: { confirm: 'Are you sure you want to delete this workout?' },
               class: 'ui button negative'
+
+- if workout.id.present?
+  = render('circuits', workout: workout)
