--- a/app/views/videos/index.html.slim
+++ b/app/views/videos/index.html.slim
@@ -1,7 +1,9 @@
 = render 'layouts/navbar', active: :videos
 
 .ui.container
-  h1 Videos
+  h1(style='display: inline-block;') Videos
+  = link_to new_video_path, class: 'ui circular icon button', style: 'margin-top: 10px; margin-left: 10px; display: inline-block;' do
+    i.plus.icon
 
   .ui.styled.accordion
     - @videos.each do |v|
@@ -9,23 +11,4 @@
         .dropdown.icon
         = v.title
       .content
-        = form_for v, html: {class: 'ui form'} do |f|
-          .field
-            = f.label :youtube_id
-            = f.text_field :youtube_id
-          .field
-            = f.label :title
-            = f.text_field :title
-          .field
-            = f.label :duration
-            = f.text_field :duration, type: 'number'
-          .field
-            = f.label :description
-            = f.text_area :description
-          .field
-            = f.submit class: 'ui button primary', data: { confirm: 'Are you sure you want to update this video?' }
-            = link_to 'Delete Video',
-                        video_path(v),
-                        method: :delete,
-                        data: {confirm: 'Are you sure you want to delete this video?'},
-                        class: 'ui button negative'
+        = render('videos/form', video: v)
